--- a/Chefs-Conclave/src/components/Chef/Chef.css
+++ b/Chefs-Conclave/src/components/Chef/Chef.css
@@ -13,7 +13,7 @@
     width: 100%;
     top: 450px;
     left: 0;
-    background-color: rgb(0, 255, 174);
+    background: linear-gradient(to bottom right, #5cdaf1, #ef47b9, #5af0d2);
     z-index: -1;
     border-radius: 5px;
     transition: .6s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -24,5 +24,5 @@
    top: 0;
 }
 .chefs .card:hover{
-    scale: 1.1;
+    scale: 1.05;
 }
