.env.local added

--- a/src/components/ChefRecipe/Chef.css
+++ b/src/components/ChefRecipe/Chef.css
@@ -42,3 +42,8 @@
 .SingleRecipes:hover .recipeDesc{
     top: 21rem;
 }
+/* .ratings{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+} */
