--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,21 @@ form{
     max-width: 500px;
     margin: auto;
     margin-top: 100px;
+    
 }
 nav a {
     color: #fff;
     text-decoration: none;
 }
-
+.rounded-circle {
+    margin: 20px;
+    width: 50px;
+}
+.grid-blog{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
 @media screen and (max-width:500px) {
     .grid{
       display: block;
@@ -36,5 +45,8 @@ nav a {
     }
     .chefs{
         padding: 10px;
+    }
+    .container{
+        flex-direction: column;
     }
 }
