--- a/src/components/ChefRecipe/Chef.css
+++ b/src/components/ChefRecipe/Chef.css
@@ -18,7 +18,7 @@
 .chefRecipeImg {
     position: relative;
     overflow: hidden;
-    width: 400px;
+    max-width: 400px;
     height: 400px;
 }
 .chefRecipeImg h4{
